highlightnavigation.js is working
Now I would like to tweak it using DRY principle, i.e., placing the
code in the c_base construct instead of in each method … I'll have to
tweak the .js file for this.

--- a/css/styles.css
+++ b/css/styles.css
@@ -194,9 +194,10 @@ a.to_nav:focus {
 #primary_nav ul li#iamhere a:link,
 #primary_nav ul li#iamhere a:visited,
 #primary_nav ul li#iamhere a:hover { 	
-	color: red; 
-	background-color:transparent; 	
-	border-bottom: 10px solid #383838;
+	color: #1c1c1c; 
+	background: #ccc;
+	/*background-color:transparent; 	
+	border-bottom: 10px solid #383838;*/
 }
 
 /*nav for access to login*/	
