--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 }
 
 body {
+	font-family: 'PT Serif', serif;
 	line-height: 1;
 }
 
@@ -84,6 +85,7 @@ a {
 
 h1 {
 	font-size: 24px;
+	line-height: 48px;
 }
 
 h2 {
