Cleaned up some code beginning delete posts
putting this up for p2 Peer Review

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ footer, header, hgroup, menu, nav, section {
 }
 
 body {
-	font-family: 'PT Serif', serif;
+/*	font-family: 'PT Serif', serif;*/
 	line-height: 1;
 }
 
