--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ footer, header, hgroup, menu, nav, section {
 }
 
 body {
-/*	font-family: 'PT Serif', serif;*/
+	font-family: 'PT Sans';
 	line-height: 1;
 }
 
@@ -89,11 +89,10 @@ h1 {
 }
 
 h2 {
-	font-family: 'PT Serif', serif;
 	font-size: 18px;
 	line-height: 1.4em;
 	margin: 0 0 .4em;
-	font-weight: bold;
+	font-weight: normal;
 }
 
 /*layout*/
@@ -102,6 +101,7 @@ article {
 	border-bottom: 1px solid #d8d8d8;
 	padding: 30px 20px 0 20px;
 	margin: 10px 0;
+	background: #f2f2f2;
 }
 
 /*header*/
@@ -126,6 +126,33 @@ header {
 		    zoom:1;
 		}
 		/* end nicolas gallagher */
+		
+		/**  http://nicolasgallagher.com/micro-clearfix-hack/
+ 		* For modern browsers
+ 		* 1. The space content is one way to avoid an Opera bug when the
+ 		*    contenteditable attribute is included anywhere else in the document.
+ 		*    Otherwise it causes space to appear at the top and bottom of elements
+ 		*    that are clearfixed.
+ 		* 2. The use of `table` rather than `block` is only necessary if using
+ 		*    `:before` to contain the top-margins of child elements.
+ 		*/
+		.cf:before,
+		.cf:after {
+    		content: " "; /* 1 */
+    		display: table; /* 2 */
+		}
+
+		.cf:after {
+    		clear: both;
+		}
+
+		/**
+ 		* For IE 6/7 only
+ 		* Include this rule to trigger hasLayout and contain floats.
+ 		*/
+		.cf {
+    		*zoom: 1;
+		}
 
 h1.logo a {
 	color: #fff;
@@ -197,7 +224,7 @@ a.to_nav:focus {
 #primary_nav ul li#iamhere a:link,
 #primary_nav ul li#iamhere a:visited,
 #primary_nav ul li#iamhere a:hover { 	
-	color: #1c1c1c; 
+	color: #fff; 
 	background: #ccc;
 	/*background:transparent; 	
 	border-bottom: 10px solid #383838;*/
@@ -239,8 +266,8 @@ a.to_nav:focus {
 #access ul li#iamhere a:link,
 #access ul li#iamhere a:visited,
 #access ul li#iamhere a:hover { 	
-	color: #1c1c1c; 
-	background: #ccc;
+	color: #fff; 
+	background: #999;
 	/*background:transparent; 	
 	border-bottom: 10px solid #383838;*/
 }
@@ -255,8 +282,8 @@ a.to_nav:focus {
 
 #access_out ul {
 	list-style: none;
-	line-height:52px;
-	margin-bottom:10px;	
+	background: transparent;
+	padding: 7px 0;
 }
 
 #access_out li {
@@ -301,52 +328,159 @@ a.to_nav:focus {
 #access_out ul li#iamhere a:link,
 #access_out ul li#iamhere a:visited,
 #access_out ul li#iamhere a:hover { 	
-	color: #1c1c1c;
-	background: #ccc;
+	color: #fff;
+	background: #999;
 }
 
-/* My css */
+/* More css */
+
+.followed {
+	background: #fff;
+}
+
+.users {
+	height: auto;
+	width: 130px;
+	border-bottom: 1px solid #d8d8d8;
+	padding: 10px 5px 0 20px;
+	margin: 10px 0;
+}
+
+.users ul {
+	display: block;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+.users li a {
+	display: block;
+	width: 60px;
+}
+
+#talker ul {
+	float:left;
+	list-style-type:none;
+	margin:0;
+	padding:0;
+}
+
+#talker li {
+
+}
+
+#talker li a {
+	display:inline;
+	width:60px;
+}
+
+.name {
+	color:#49afcc;
+}
+
+.website {
+	font-size: smaller;
+	color: #dadada;
+}
 
 time {
 	font-size: smaller;
 	color: #dadada;
 }
 
-article {
-	background: #f2f2f2;
+span {
+	color: #999;
+}
+
+p {
+	line-height: 1.5em;
+	font-size: 100%;
 }
 
 .error {
 	color:#FF0000;
 }
 
+input[type="button"], 
+input[type="submit"], 
+input[type="reset"], 
+input[type="file"]::-webkit-file-upload-button,
 button {
-	line-height: 10px;
-	color: #ffffff;
+	line-height: 6px;
+	color: #fff;
 	font-size: 12px;
-	background: #999999;
+	background: #ccc;
 	border: 0;
 	text-decoration: none;
-	margin-bottom: 50px;
-	margin-top: 5px;
+	padding-top: 5px;
+	padding-bottom: 7px;
+}
+input[type="submit"]:hover {
+	background: #999;
 }
 
-.button:hover {
-  	background: #ccc;
+#confirmDelete {
+	float: right;
+	margin-right: 50px;
+}
+
+a #confirmDelete {
+	float: right;
+	margin-right: 50px;
+}
+
+a #buttonDelete {
+	padding: 5px;
+	float: right;
+	margin-right: 0px;
+}
+
+/* Follow Unfollow button */
+button a {
+	float: none;
+	color: #fff;
+	text-decoration: none;
+	margin-left: 0px;
+	text-align: center:
+	height: 50px;
+}
+
+button {
+  border: 2px solid #eee;
+  height: 22px;
+  margin: 0px 0 0 0px;
+  overflow: hidden;
+  display: block;
+  text-align: center;
+  line-height: 10px;
+}
+
+/* Delete Post button*/
+button:hover  {
+	color: #fff;
+  	background: #999;
   	text-decoration: none;
+	border:none;
 }
 
-#buttonDelete {
 
-}
+
 
 /*footer*/
 
 footer {
 	font-family: 'PT Serif', serif;
+	color: #fff;
+	height: 50px;
 	font-style: italic;
 	text-align: center;
+	vertical-align: -50px;
 	font-size: 14px;
+	background: #49afcc;
+}
+
+#mySpan {
+	padding-top: 12px;
 }
 
 /*media queries*/
@@ -361,6 +495,24 @@ footer {
 		position: relative;
 		width: 768px;
 		margin: auto;
+	}
+
+	#talker ul {
+		float:left;
+		list-style-type:none;
+		margin:0;
+	}
+
+	#talker li {
+		display:inline;
+	}
+
+	.talker_name {
+		color:#49afcc;
+	}
+
+	.content {
+
 	}
 	/* primary navigation */
 	#primary_nav {
@@ -391,13 +543,13 @@ footer {
 	/* access navigation when logged in */
 	#access {
 		position: absolute;
-		top: 63px;
+		top: 56px;
 		right: 10px;
 		background: transparent;
 	}
 	#access ul {
 		list-style: none;
-		color: #c1c1c1;
+		color: #fff;
 		line-height:52px;
 		margin-bottom:10px;
 	}
@@ -445,7 +597,8 @@ footer {
 	#access ul li#iamhere a:link,
 	#access ul li#iamhere a:visited,
 	#access ul li#iamhere a:hover { 	
-		color: #1c1c1c;
-		background: #ccc;
+		color: #fff;
+		background: #999999;
 	}
+	
 }
