--- a/css/styles.css
+++ b/css/styles.css
@@ -378,9 +378,15 @@ a.to_nav:focus {
 	color:#49afcc;
 }
 
-.website {
-	font-size: smaller;
-	color: #dadada;
+ul .website a {
+	font-size: small;
+	color: #999;
+	text-decoration: none;
+}
+
+ul .website a:hover {
+	color: #999;
+	text-decoration: underline;
 }
 
 time {
@@ -446,9 +452,9 @@ button a {
 }
 
 button {
-  border: 2px solid #eee;
   height: 22px;
   margin: 0px 0 0 0px;
+border: 0;
   overflow: hidden;
   display: block;
   text-align: center;
@@ -463,20 +469,18 @@ button:hover  {
 	border:none;
 }
 
-
-
-
 /*footer*/
 
 footer {
 	font-family: 'PT Serif', serif;
-	color: #fff;
+	color: #e4e4e4;
 	height: 50px;
 	font-style: italic;
 	text-align: center;
 	vertical-align: -50px;
 	font-size: 14px;
 	background: #49afcc;
+	padding: 0 10px 10px 10px;
 }
 
 #mySpan {
