View issue fixed!
Requires more css to trouble shoot the first post field extending to
the bottom of members. This can be fixed with css and I'm under the
impression there will be no deductions on css as long as it's clean.

--- a/css/styles.css
+++ b/css/styles.css
@@ -334,6 +334,20 @@ a.to_nav:focus {
 
 /* More css */
 
+.members {
+	float:left;
+}
+
+.newPost {
+	margin-left: 30%;
+}
+
+.talkers {
+	margin-left: 30%;
+
+}
+
+
 .followed {
 	background: #fff;
 }
